# ClaudeJunk

./: CMakeLists.txt  README.md  README_EDR_Test.md  change-password.ps1  edr_test_cleaned.cpp  find-blaze.ps1  happiness.ps1  scariest.py  super_suite.py
YellowKey/: README.md  deploy.ps1
cloudpivot-poc/: CMakeLists.txt
edr_test/: README.md
greenplasma-poc/: CMakeLists.txt  CloudPivot.cpp  GreenPlasma.cpp  JoeysCode.cpp
joeys-world/: README.md  main.cpp
phantomrpc-poc/: README.md
phantomrpc-poc/POCs/DHCP/: ExampleInterface.idl  build.bat  server.c
phantomrpc-poc/POCs/TERM/: ExampleInterface.idl  build.bat  server.c
phantomrpc-poc/toolset/: check_mitigations.ps1  find_vulnerable_rpcs.ps1
